--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -102,12 +102,15 @@ a:link {
 .teaItem p{
     /* background-color: green; */
     display: inline-block;
-    font-weight: 400;
+    font-weight: 400; 
     margin-top: 5px;
     margin-bottom: 5px;
     
 }
-
+ 
+.teaFlavor{
+    display: inline-block;
+}
 .teaFlavor, .teaCollection{
     /* background-color: orangered; */
     text-align: left;
